devops/kubernetes/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-wildcard" # change if you use different issuer
spec:
  tls:
    - hosts:
        - dashboard.k8s.aravindweb.com
      secretName: dashboard-k8s-aravindweb-com-tls
  rules:
    - host: dashboard.k8s.aravindweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 8443
